--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.gson-2.8.0.jar=C:\\Users\\PC GAMER\\Documents\\GitHub\\Estadisticas-Savio\\libs\\gson-2.8.0.jar
+file.reference.gson-2.8.0.jar=E:\\GitHub\\Estadisticas-Savio\\libs\\gson-2.8.0.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\PC GAMER\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\andre\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
